<resources>
    <string name="app_name">Grocery Router</string>
    <string name="userLoc">Set Warehouse Location</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="deliveryLocation">Set Delivery Locations</string>
    <string name="done">Done</string>
    <string name="demand">Demand (in kgs)</string>
    <string name="capacity">Capacity (in kgs)</string>
    <string name="next_agent">Next Agent</string>
    <string name="deliveryAgents">Set Delivery Agents Capacity</string>
    <string name="calculate">Go</string>
    <string name="import_excel">Import from Excel</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="upload">Upload</string>
    <string name="allocated_routes">Allocated Routes</string>
    <string name="warehouse_coordinates">Warehouse Coordinates</string>
    <string name="delivery_coordinates">Delivery Coordinates</string>
    <string name="delivery_agents">Delivery Agents</string>
    <string name="view">View Inputs</string>
    <string name="updateOrDelete">ID: Update or Delete</string>
    <string name="id_heading">ID</string>
    <string name="latitude_heading">Latitude</string>
    <string name="longitude_heading">Longitude</string>
    <string name="demand_heading">Demand</string>
    <string name="capacity_heading">Demand</string>
    <string name="back">Back</string>
    <string name="clear">Clear Inputs</string>
    <string name="label">Label (Optional)</string>
    <string name="label_heading">Label</string>
    <string name="googlemap">Set Location in Map</string>

</resources>
