<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEDBD0"
    tools:context=".DeliveryAgentActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/heading_agent_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Agent Capacity" />

        <EditText
            android:id="@+id/capacity_agent_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/capacity"
            android:inputType="number" />

        <EditText
            android:id="@+id/label_agent_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label"
            android:inputType="text" />
        <EditText
            android:id="@+id/id_agent_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/updateOrDelete"
            android:inputType="number"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/add_agent_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/update_agent_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/delete_agent_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <Button
                android:id="@+id/view_agent_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view" />

            <Button
                android:id="@+id/clear_agent_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/import_excel_agent_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_excel" />
        <Button
            android:id="@+id/done_agent_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />
    </LinearLayout>
</RelativeLayout>