<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/warehouseLoc_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userLoc" />

        <Button
            android:id="@+id/deliveryLoc_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deliveryLocation" />

        <Button
            android:id="@+id/deliveryAgents_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deliveryAgents" />
        <Button
            android:id="@+id/calculate_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />

    </LinearLayout>



</RelativeLayout>