<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoordinateInputActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp">

        <TextView
            android:id="@+id/heading_coordinate_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter the Coordinates" />

        <EditText
            android:id="@+id/latitude_coordinate_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/latitude"
            android:inputType="number" />

        <EditText
            android:id="@+id/longitude_coordinate_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/longitude"
            android:inputType="number" />
        <EditText
            android:id="@+id/demand_coordinate_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/demand"
            android:inputType="number" />

        <Button
            android:id="@+id/nextCoordinate_coordinate_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nextCoordinate" />

        <Button
            android:id="@+id/done_coordinate_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />
        <Button
            android:id="@+id/import_excel_coordinate_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_excel" />

    </LinearLayout>

</RelativeLayout>