<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEDBD0"
    tools:context=".CoordinateWarehouseActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/heading_coordinate_warehouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter the Coordinates" />

        <EditText
            android:id="@+id/latitude_coordinate_warehouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/latitude"
            android:inputType="number|text" />

        <EditText
            android:id="@+id/longitude_coordinate_warehouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/longitude"
            android:inputType="number|text" />
        <Button
            android:id="@+id/set_coordinate_warehouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/googlemap" />
        <Button
            android:id="@+id/done_coordinate_warehouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />

    </LinearLayout>

</RelativeLayout>